changed fonts and styles

--- a/index.html
+++ b/index.html
@@ -11,27 +11,24 @@
     <meta name="author" content="Hyunjung Joun" />
 
     <!-- Font from Google Fonts-->
-    <!-- Serif: Noto Serif -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Serif: DM Serif Display -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap"
       rel="stylesheet"
     />
 
-    <!-- San-serif: Lato -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- San-serif: DM Sans -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;1,9..40,100;1,9..40,200;1,9..40,300;1,9..40,400;1,9..40,500&display=swap"
       rel="stylesheet"
     />
 
-    <!-- San-serif: REM -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- San-serif: Figtree -->
     <link
-      href="https://fonts.googleapis.com/css2?family=REM:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500&display=swap"
       rel="stylesheet"
     />
 
@@ -129,6 +126,14 @@
               modern design. A captivating tribute to human creativity and
               ingenuity.
             </p>
+            <div id="highlight-buttons" class="row-gap-m">
+              <a href="#" class="button-circle-32">
+                <i class="fa-solid fa-chevron-left"></i>
+              </a>
+              <a href="#" class="button-circle-32">
+                <i class="fa-solid fa-chevron-right"></i>
+              </a>
+            </div>
           </div>
         </div>
 
@@ -177,7 +182,7 @@
               <a href="#" class="viewall">
                 <p>view all insights</p>
                 <div class="button-circle-24">
-                  <i class="fa-solid fa-arrow-right fa-lg"></i>
+                  <i class="fa-solid fa-chevron-right"></i>
                 </div>
               </a>
             </div>
