refactored car-awards

--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
       <!-- Section: Cover -->
       <section id="cover">
         <!-- Highlight -->
-        <div id="highlight">
+        <div id="highlight" class="section-bg-img" style="--bg-img: url(../../data/insights/thumbnail/test.jpg)">
           <!-- Component: Topic -->
           <div class="section-container col-gap-m">
             <div>
-              <p class="button-text text-white topic topic-white">topic</p>
+              <label class="button-text text-white topic topic-white">topic</label>
             </div>
             <h1 class="serif text-white">
               Building Dreams: Exploring the Timeless Beauty of Architecture
@@ -196,16 +196,15 @@
           </div>
         </div>
         <div id="monthlyAwards-content">
-          <div class="component-card-awards">
-            <!-- [Load Component] -->
-            <div class="font-white">
-              <div class="col-gap-m">
-                <div class="label-square">
-                  <p class="body-s">The Winner Of July</p>
+          <div id="awards-list">
+            <!-- [Load Component] -->            
+            <div class="card-awards text-white section-bg-img" style="--bg-img: url(../../data/insights/thumbnail/test.jpg)">
+              <div class="card-awards-container col-gap-m">
+                <div class="card-awards-label">
+                  <label class="body-s">The Winner Of July</label>
                 </div>
-                <h2 class="serif">The Campus IFA 2020</h2>
+                <h3 class="serif">The Campus IFA 2020</h3>
                 <h4>Modern Fusion Studio</h4>
-
                 <div class="donut-chart" style="--num: 8.8">
                   <svg>
                     <circle cx="43" cy="43" r="43"></circle>
@@ -221,14 +220,13 @@
                 </q>
               </div>
             </div>
-            <div class="font-white">
-              <div class="col-gap-m">
-                <div class="label-square">
-                  <p class="body-s">The 2nd Place Of July</p>
+            <div class="card-awards text-white section-bg-img" style="--bg-img: url(../../data/insights/thumbnail/test.jpg)">
+              <div class="card-awards-container col-gap-m">
+                <div class="card-awards-label">
+                  <label class="body-s">The Winner Of July</label>
                 </div>
-                <h4 class="serif">The Campus IFA 2020</h4>
-                <p>Modern Fusion Studio</p>
-
+                <h3 class="serif">The Campus IFA 2020</h3>
+                <h4>Modern Fusion Studio</h4>
                 <div class="donut-chart" style="--num: 8.8">
                   <svg>
                     <circle cx="43" cy="43" r="43"></circle>
@@ -238,20 +236,19 @@
                     <h4>8.8</h4>
                   </div>
                 </div>
-                <q class="italic body-s">
+                <q class="italic">
                   "An awe-inspiring masterpiece that transcends the ordinary and
                   elevates architecture to extraordinary heights.”
                 </q>
               </div>
             </div>
-            <div class="font-white">
-              <div class="col-gap-m">
-                <div class="label-square">
-                  <p class="body-s">The Honourable Of July</p>
+            <div class="card-awards text-white section-bg-img" style="--bg-img: url(../../data/insights/thumbnail/test.jpg)">
+              <div class="card-awards-container col-gap-m">
+                <div class="card-awards-label">
+                  <label class="body-s">The Winner Of July</label>
                 </div>
-                <h4 class="serif">The Campus IFA 2020</h4>
-                <p>Modern Fusion Studio</p>
-
+                <h3 class="serif">The Campus IFA 2020</h3>
+                <h4>Modern Fusion Studio</h4>
                 <div class="donut-chart" style="--num: 8.8">
                   <svg>
                     <circle cx="43" cy="43" r="43"></circle>
@@ -261,12 +258,12 @@
                     <h4>8.8</h4>
                   </div>
                 </div>
-                <q class="italic body-s">
+                <q class="italic ">
                   "An awe-inspiring masterpiece that transcends the ordinary and
                   elevates architecture to extraordinary heights.”
                 </q>
               </div>
-            </div>            
+            </div>           
           </div>
         </div>
       </section>
