video section markup

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- Custom CSS Files -->
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/variables.css" />
-    <link rel="stylesheet" href="assets/css/semantic.css" />
+    <link rel="stylesheet" href="assets/css/theme.css" />
     <link rel="stylesheet" href="assets/css/reusable.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
     <link rel="stylesheet" href="assets/css/specific.css" />
@@ -77,7 +77,7 @@
   <body>
     <!-- Navigation Bar-->
     <header class="position-relative">
-      <nav id="navbar">
+      <nav id="navbar" class="row">
         <div id="navbar-menu">
           <img id="navbar-logo" src="assets/image/logo.png" />
           <div id="navbar-items">
@@ -476,11 +476,13 @@
           </div>
         </div>
         <div id="savedForLater-content">
-          <ul id="savedForLater-list">
-            <li class="savedForLater-list-item">
-              <div classe="savedForLater-card">
-                <label class="topic button-text">topic</label>
-                <div class="savedForLater-text">
+          <ul id="savedForLater-list" class="row-gap-m">
+            <li class="card-savedForLater col-gap-m text-white savedForLater-list-item section-bg-img" style="--bg-img: url(../../data/insights/thumbnail/test.jpg)">
+              <div class="card-savedForLater-text col-gap-m" >
+                <div>
+                  <label class="topic topic-white button-text">topic</label>
+                </div>
+                <div class="card-savedForLater-title col-gap-m">
                   <h3 class="serif">List Headline level 2 text for title up to 2 lines</h3>
                   <div class="avatar row-gap-s">
                     <p>
@@ -491,9 +493,54 @@
                 </div>
               </div>
             </li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li class="card-savedForLater col-gap-m text-white savedForLater-list-item section-bg-img" style="--bg-img: url(../../data/insights/thumbnail/test.jpg)">
+              <div class="card-savedForLater-text col-gap-m" >
+                <div>
+                  <label class="topic topic-white button-text">topic</label>
+                </div>
+                <div class="card-savedForLater-title col-gap-m">
+                  <h3 class="serif">List Headline level 2 text for title up to 2 lines</h3>
+                  <div class="avatar row-gap-s">
+                    <p>
+                      <i class="fa-regular fa-circle-user"></i>
+                    </p>
+                    <p>Eleanor Montgomery</p>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="card-savedForLater col-gap-m text-white savedForLater-list-item section-bg-img" style="--bg-img: url(../../data/insights/thumbnail/test.jpg)">
+              <div class="card-savedForLater-text col-gap-m" >
+                <div>
+                  <label class="topic topic-white button-text">topic</label>
+                </div>
+                <div class="card-savedForLater-title col-gap-m">
+                  <h3 class="serif">List Headline level 2 text for title up to 2 lines</h3>
+                  <div class="avatar row-gap-s">
+                    <p>
+                      <i class="fa-regular fa-circle-user"></i>
+                    </p>
+                    <p>Eleanor Montgomery</p>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="card-savedForLater col-gap-m text-white savedForLater-list-item section-bg-img" style="--bg-img: url(../../data/insights/thumbnail/test.jpg)">
+              <div class="card-savedForLater-text col-gap-m" >
+                <div>
+                  <label class="topic topic-white button-text">topic</label>
+                </div>
+                <div class="card-savedForLater-title col-gap-m">
+                  <h3 class="serif">List Headline level 2 text for title up to 2 lines</h3>
+                  <div class="avatar row-gap-s">
+                    <p>
+                      <i class="fa-regular fa-circle-user"></i>
+                    </p>
+                    <p>Eleanor Montgomery</p>
+                  </div>
+                </div>
+              </div>
+            </li>
           </ul>
         </div>
       </section>
@@ -503,7 +550,29 @@
         <div class="section-title">
           <p>Video</p>
         </div>
-        <div id="video-content"></div>
+        <div id="video-content">
+          <div id="video-highlight" class="section-bg-img col" style="--bg-img: url(../../data/insights/thumbnail/test.jpg)">
+            <div id="video-highlight-text" class="col-gap-m text-white">
+              <div>
+                <label class="topic topic-white button-text">topic</label>
+              </div>
+              <h2 class="serif">Headline level 1 text for cover title ideally up to three lines</h2>
+              <p>Body small text summary text goes here up to three lines, body small text summary text goes here up to three lines...</p>
+              <a href="#" class="row-gap-s">
+                <h4>
+                  <i class="fa-regular fa-circle-play"></i>
+                </h4>
+                  <h4 class="uppercase">play</h4>
+              </a>
+            </div>
+          </div>
+          <div id="video-list">
+            <ul>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+        </div>
       </section>
 
       <!-- Section: explore -->
