--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
           </div>
 
           <!-- The latest -->
-          <div id="latest" class="section-aside">
+          <div id="latest" class="section-aside col-gap-m">
             <div class="section-title row between">
               <p>
                 the latest
