featured authors - add view all

--- a/index.html
+++ b/index.html
@@ -746,7 +746,9 @@
                 </div>
               </li>
             </ul>
-          </div>
+            <div class="featured-authors-viewAll component-viewAll row">
+            </div>
+        </div>
       </section>
 
 
